Add My Dashboard Icon & BCP Add Retailer Route Page.

--- a/src/app/app/shared/components/header.component.html
+++ b/src/app/app/shared/components/header.component.html
@@ -6,6 +6,7 @@
             <div class="header-icon back" *ngIf="getHeaderLayout().back" (click)="goToPreviousPage()"></div>
             <div class="header-icon filter" *ngIf="getHeaderLayout().filter" (click)="toggleFilter()"></div>
             <div class="header-icon search" *ngIf="getHeaderLayout().search" (click)="toggleSearch()"></div>
+            <div class="header-icon add" *ngIf="getHeaderLayout().add" (click)="toggleAdd()"></div>
         </div>
     </div>
 </div>
