--- a/src/app/app/shared/components/home.component.html
+++ b/src/app/app/shared/components/home.component.html
@@ -13,7 +13,7 @@
 <div class="home-container">
     <div class="home-item-box">
         <div class="home-table" (click)="goToMyDashboard()">
-            <div class='cell icon target'></div>
+            <div class='cell icon mydashboard'></div>
             <div class='cell'>
                 <div class="home-table">
                     <div class='cell single'> 
