add edit load transfer page UI

--- a/src/app/app/basic-call-procedure/components/retailer-sales-order.component.html
+++ b/src/app/app/basic-call-procedure/components/retailer-sales-order.component.html
@@ -70,7 +70,7 @@
             <div class='cell'>
                 <div class='container'><div class='cell right'>4,000.00 ₱</div></div>
             </div>
-            <div class='cell icon edit-gray'></div>
+            <div class='cell icon edit-gray' (click)="gotoAddEditLoadTransfer()"></div>
         </div>
     </div>
     <div class="item-container">
