--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -1,4 +1,30 @@
 $select-arrow: 'data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/PjxzdmcgaGVpZ2h0PSI0OCIgdmlld0JveD0iMCAwIDQ4IDQ4IiB3aWR0aD0iNDgiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZD0iTTE0LjgzIDE2LjQybDkuMTcgOS4xNyA5LjE3LTkuMTcgMi44MyAyLjgzLTEyIDEyLTEyLTEyeiIvPjxwYXRoIGQ9Ik0wLS43NWg0OHY0OGgtNDh6IiBmaWxsPSJub25lIi8+PC9zdmc+';
+
+
+// PLEASE PUT WIDTH HERE
+&.width-10 { width: 10%; }
+&.width-20 { width: 20%; }
+&.width-30 { width: 30%; }
+&.width-33 { width: 33%; }
+&.width-34 { width: 34%; }
+&.width-35 { width: 35%; }
+&.width-40 { width: 40%; }
+&.width-45 { width: 45%; }
+&.width-50 { width: 50%; }
+&.width-55 { width: 55%; }
+&.width-60 { width: 60%; }
+&.width-70 { width: 70%; }
+&.width-80 { width: 80%; }
+&.width-90 { width: 90%; }
+&.width-100 { width: 100%; }
+
+
+                
+.peso {
+    position: absolute;
+    padding: 1% 0% 0% 43.3%;
+}
+
 /*
 ===========================================================
 SUBMENU
@@ -328,6 +354,14 @@ LIST VIEW - TEXT
         cursor: pointer;
         padding-top: 2vw;
         padding-bottom: 2vw;
+
+        &.fixed {
+            position: fixed;
+        }
+
+        &.margin-top-13 {
+            margin-top: 13%;
+        }
         
         .item-notification {   
             font-size: $filter-select;
@@ -356,10 +390,23 @@ LIST VIEW - TEXT
             font-size: $content-normal;
             height:1.6em;
             vertical-align:middle;
+
             input {
                 height: 6vw;
+
                 &.width-30 {
                     width: 30vw;
+                }
+                &.input-peso {
+                    text-align: right;
+                    font-size: $content-normal;
+                    padding: 0% 11% 0% 0%;
+                    @media screen and (-webkit-min-device-pixel-ratio: 0) {
+                        background-image: url(#{$icon-peso});
+                        background-position: right 2% top 50%;
+                        background-repeat: no-repeat;
+                        background-size: 3.5vw;
+                    }
                 }
             }
             textarea {
@@ -374,6 +421,21 @@ LIST VIEW - TEXT
                 font-weight:lighter;
                 appearance: none;
                 cursor: pointer;
+            }
+
+
+            select {
+                background: $white;
+                height: 8vw;
+                border: 1px solid $dark-grey;
+                -webkit-appearance: none;
+                padding-left: 5vw;
+                appearance: none;
+                @media screen and (-webkit-min-device-pixel-ratio: 0) {
+                    background-image: url(#{$select-arrow});
+                    background-position: right 0 top 50%;
+                    background-repeat: no-repeat;
+                }
             }
 
             .filter-input{
@@ -398,24 +460,12 @@ LIST VIEW - TEXT
                 }
             }
 
-            // PLEASE PUT WIDTH HERE
-            &.width-10 { width: 10%; }
-            &.width-20 { width: 20%; }
-            &.width-30 { width: 30%; }
-            &.width-33 { width: 33%; }
-            &.width-34 { width: 34%; }
-            &.width-40 { width: 40%; }
-            &.width-45 { width: 45%; }
-            &.width-50 { width: 50%; }
-            &.width-60 { width: 60%; }
-            &.width-70 { width: 70%; }
-            &.width-80 { width: 80%; }
-            &.width-90 { width: 90%; }
-            &.width-100 { width: 100%; }
+
             
             // PLEASE PUT STYLE HERE
             &.padding-left-5 { padding-left: 5vw; }
             &.padding-left-10 { padding-left: 10vw; }
+            &.padding-right-3 { padding-right: 3vw; }
             &.padding-right-5 { padding-right: 5vw; }
             
             &.small { font-size: small; }
