--- a/src/app/app/basic-call-procedure/components/bcp-add-retailer-route.component.html
+++ b/src/app/app/basic-call-procedure/components/bcp-add-retailer-route.component.html
@@ -1,61 +1,70 @@
 <div class="container-body">
     <div class="item-container">
         <div class='container'>
+            <div class='cell width-20'>
+                <input id="checkbox-1" class="checkbox-custom" name="checkbox-1" type="checkbox">
+                <label for="checkbox-1" class="checkbox-custom-label"></label>
+            </div>
             <div class='cell'>
-                <div class='container'>
-                    <div class='cell width-20 padding-left-5'>
-                        <div class="squaredThree">
-                            <input type="checkbox" value="None" id="squaredThree" name="check" checked />
-                                <label for="squaredThree"></label>
-                        </div>
+                
+                    <div class='container'>
+                        <div class='cell width-80 padding-right-5'>BM Store</div>
                     </div>
-                </div>
+                    <div class='container'>
+                        <div class='cell width-80 padding-right-5 grey'>9995207740</div>
+                    </div>
+                    <div class='container'>
+                        <div class='cell width-80 padding-right-5 grey'>MARIKINA</div>
+                    </div>
+                
             </div>  
         </div>
-
-        <div class="container">
-            <div class="cell">
-                <div class="container">
-                    <div class='cell width-80 padding-right-5'>BM Store</div>
-                </div>
-            </div>
-            <div class="cell">
-                <div class="container">
-                    <div class='cell width-80 padding-right-5 grey'>9995207740</div>
-                </div>
-            </div>
-            <div class="cell">
-                <div class="container">
-                    <div class='cell width-80 padding-right-5 grey'>MARIKINA</div>
-                </div>
-            </div>
-        </div>
-
-
-
-
     </div>
-<!--     <div class="item-container">
+
+
+    <div class="item-container">
         <div class='container'>
-            <div class='cell'>
-                <div class='container'><div class='cell width-100 padding-left-5'>DSP SUN Wallet Balance</div></div>
+            <div class='cell width-20'>
+                <input id="checkbox-2" class="checkbox-custom" name="checkbox-2" type="checkbox">
+                <label for="checkbox-2" class="checkbox-custom-label"></label>
             </div>
+            <div class='cell'>
+                    <div class='container'>
+                        <div class='cell width-80 padding-right-5'>Anton Arenyer 12609</div>
+                    </div>
+                    <div class='container'>
+                        <div class='cell width-80 padding-right-5 grey'>9289541403</div>
+                    </div>
+                    <div class='container'>
+                        <div class='cell width-80 padding-right-5 grey'>Beside of Mapua &amp; Lyceum Intramuros Manila</div>
+                    </div>     
+
+            </div>  
         </div>
+    </div>
+
+
+    <div class="item-container">
         <div class='container'>
-            <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-left-5'>Suggested Orders</div></div>
-                <div class='container'><div class='cell width-50 padding-left-5'>Before</div></div>
-                <div class='container'><div class='cell width-50 padding-left-5'>Transfer Amount</div></div>
-                <div class='container'><div class='cell width-50 padding-left-5'>After</div></div>
+            <div class='cell width-20'>
+                <input id="checkbox-3" class="checkbox-custom" name="checkbox-3" type="checkbox">
+                <label for="checkbox-3" class="checkbox-custom-label"></label>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell width-50 align-right'>350</div></div>
-                <div class='container'><div class='cell width-50 align-right'>50,000.00 ₱</div></div>
-                <div class='container'><div class='cell width-50 align-right'>Transfer Amount</div></div>
-                <div class='container'><div class='cell width-50 align-right'>After</div></div>
-            </div>
+                    <div class='container'>
+                        <div class='cell width-80 padding-right-5'>Del Rosario Store 12609</div>
+                    </div>
+                    <div class='container'>
+                        <div class='cell width-80 padding-right-5 grey'>9219762762</div>
+                    </div>
+                    <div class='container'>
+                        <div class='cell width-80 padding-right-5 grey'>729 VICTORIA ST. INTRAMUROS MANILA</div>
+                    </div>     
+
+            </div>  
         </div>
-    </div> -->
+    </div>
+
 
     <div class='item-container'>
         <div class="container">
