--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -1,6 +1,62 @@
 $select-arrow: 'data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/PjxzdmcgaGVpZ2h0PSI0OCIgdmlld0JveD0iMCAwIDQ4IDQ4IiB3aWR0aD0iNDgiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZD0iTTE0LjgzIDE2LjQybDkuMTcgOS4xNyA5LjE3LTkuMTcgMi44MyAyLjgzLTEyIDEyLTEyLTEyeiIvPjxwYXRoIGQ9Ik0wLS43NWg0OHY0OGgtNDh6IiBmaWxsPSJub25lIi8+PC9zdmc+';
 
-.mydashboard {
+
+/*
+===========================================================
+CHECKBOX
+===========================================================
+*/
+.checkbox-custom {
+    opacity: 0;
+    position: absolute;   
+}
+
+.checkbox-custom, .checkbox-custom-label {
+    display: inline-block;
+    vertical-align: middle;
+    padding-left: 25%;
+    cursor: pointer;
+}
+
+.checkbox-custom-label {
+    position: relative;
+}
+
+.checkbox-custom + .checkbox-custom-label:before {
+    content: '';
+    background: #fff;
+    border: 3px solid #62BB47;
+    display: inline-block;
+    vertical-align: middle;
+    border-radius: 20%;
+    width: 7vw;
+    height: 7vw;
+    padding: 1vw;
+    text-align: center;
+}
+
+.checkbox-custom:checked + .checkbox-custom-label:before {
+    content: "✓";
+    vertical-align: middle;
+    text-align: center;
+    background: #62BB47;
+    color: #fff;
+    font-weight: bolder;
+
+}
+
+
+/*
+===========================================================
+END OF CHECKBOX
+===========================================================
+*/
+
+
+
+
+
+&.mydashboard {
     background: url(#{$icon-round-grad-mydashboard})no-repeat;
     background-position-x: center;
     background-position-y: center;
@@ -374,6 +430,7 @@ LIST VIEW - TEXT
                 &.width-30 {
                     width: 30vw;
                 }
+
             }
             textarea {
                 background: $white;
@@ -409,49 +466,6 @@ LIST VIEW - TEXT
                     margin: 0% 0% 5% 40%;
                 }
             }
-
-            /* .squaredThree */
-            .squaredThree {
-            width: 20px;
-            position: relative;
-            margin: 20px auto;
-                label {
-                width: 20px;
-                height: 20px;
-                cursor: pointer;
-                position: absolute;
-                top: 0;
-                left: 0;
-                background: linear-gradient(top, #222 0%, #45484d 100%);
-                border-radius: 4px;
-                box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,.4);
-                    &:after {
-                        content: '';
-                        width: 9px;
-                        height: 5px;
-                        position: absolute;
-                        top: 4px;
-                        left: 4px;
-                        border: 3px solid #fcfff4;
-                        border-top: none;
-                        border-right: none;
-                        background: transparent;
-                        opacity: 0;
-                        transform: rotate(-45deg);
-                    }
-                    &:hover::after {
-                        opacity: 0.3;
-                    }
-                }
-                input[type=checkbox] {
-                    visibility: hidden;
-                    &:checked + label:after {
-                        opacity: 1;
-                    }    
-                }
-            }
-            /* end .squaredThree */
-
 
 
             // PLEASE PUT WIDTH HERE
