Clean up some unused Global Parameter SCSS.

--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -12,7 +12,7 @@
 @import "verification";
 @import "mpin";
 
-@import "targets-actuals";
+// @import "targets-actuals";
 @import "inventory";
 @import "retailer-route";
 @import "accounts-receivables";
