modify sales order payment and inventory page, add unserved order page

--- a/src/app/app/close-day/components/close-day.component.html
+++ b/src/app/app/close-day/components/close-day.component.html
@@ -28,10 +28,10 @@
             <div class="text">Collection &amp; Remittance</div>
         </div>      
     </div>
-    <div class="double-divider" hidden>
+    <div class="double-divider" (click)="goToUnservedOrder()" id="unserved-order">
         <div class= "square-button border-bottom">
-            <div class="icon sync"></div>
-            <div class="text">Sync</div>
+            <div class="icon unserved-order"></div>
+            <div class="text">Unserved Order</div>
         </div>      
     </div>
 </div>
