--- a/src/app/app/my-transaction/components/inventory.component.html
+++ b/src/app/app/my-transaction/components/inventory.component.html
@@ -78,18 +78,30 @@
 					<div class='cell'>
 				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Total Inventory</div></div>
 				        <div class='container'><div class='cell width-45 padding-left-10'>Beginning Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-10 small'>As of 2016-04-22  13:00</div></div>
 				        <div class='container'><div class='cell width-45 padding-left-10'>Delivery</div></div>
 				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Sales</div></div>
 				        <div class='container'><div class='cell width-45 padding-left-10'>Sold</div></div>
 				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Ending Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Current Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-10 small'>As of 2016-04-22  13:00</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-5 bold'>For Validation</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-10'>Dispute Amount</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-10'>Others</div></div>
 				    </div>
 					<div class='cell'>
 				        <div class='container'><div class='cell width-45 align-right bold'>600</div></div>
 				        <div class='container'><div class='cell width-45 align-right'>100</div></div>
+				        <div class='container'><div class='cell width-45 align-right'></div></div>
 				        <div class='container'><div class='cell width-45 align-right'>100</div></div>
 				        <div class='container'><div class='cell width-45 align-right bold'>100</div></div>
 				        <div class='container'><div class='cell width-45 align-right'>100</div></div>
 				        <div class='container'><div class='cell width-45 align-right bold'>700</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>300</div></div>
+				        <div class='container'><div class='cell width-45 align-right'></div></div>
+				        <div class='container'><div class='cell width-45 align-right'>-200</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>1000</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>-1200</div></div>
 				    </div>
 				    <div class='cell width-10'></div>
 				</div>
