--- a/src/app/app/shared/components/left-menu.component.html
+++ b/src/app/app/shared/components/left-menu.component.html
@@ -113,6 +113,13 @@
                 </div>
             </div>
         <div class="separator"></div>
+            <div class="container" (click)="goToCDUnservedOrder()">
+                <div class='cell icon unserved-order'></div>
+                <div class='cell'>
+                    <div class='container'><div class='cell single'>Unserved Order</div></div>
+                </div>
+            </div>
+        <div class="separator"></div>
 
 
         <div class="container" (click)="goToRemittance()">
