--- a/src/app/scss/_left-menu.scss
+++ b/src/app/scss/_left-menu.scss
@@ -188,6 +188,12 @@
                 background-position-y: center;
                 background-size: 7vw;
             }
+            &.unserved-order {
+                background: url(#{$icon-round-grad-unserved-order})no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                background-size: 7vw;
+            }
         }
     }
 }
