adding ID for some element

--- a/src/app/app/shared/components/home.component.html
+++ b/src/app/app/shared/components/home.component.html
@@ -16,7 +16,7 @@
             <div class='cell icon mydashboard'></div>
             <div class='cell'>
                 <div class="home-table">
-                    <div class='cell single'> 
+                    <div id='dashboard-home-btn' class='cell single'> 
                         My Dashboard
                     </div>
                 </div>
@@ -28,7 +28,7 @@
             <div class='cell icon target'></div>
             <div class='cell'>
                 <div class="home-table">
-                    <div class='cell single'>
+                    <div id='targets-actuals-home-btn' class='cell single'>
                         Targets &amp; Actuals
                     </div>
                 </div>
@@ -40,7 +40,7 @@
             <div class='cell icon inventory'></div>
             <div class='cell'>
                 <div class="home-table">
-                    <div class='cell single'>
+                    <div id='inventory-home-btn' class='cell single'>
                         Inventory
                     </div>
                 </div>
@@ -52,7 +52,7 @@
             <div class='cell icon bcp'></div>
             <div class='cell'>
                 <div class="home-table">
-                    <div class='cell single'>
+                    <div id='basic-call-procedure-home-btn' class='cell single'>
                         Basic Call Procedure
                     </div>
                 </div>
@@ -64,7 +64,7 @@
             <div class='cell icon remittance'></div>
             <div class='cell'>
                 <div class="home-table">
-                    <div class='cell single'>
+                    <div id='remittance-home-btn'class='cell single'>
                         Remittance
                     </div>
                 </div>
@@ -76,7 +76,7 @@
             <div class='cell icon stock-return'></div>
             <div class='cell'>
                 <div class="home-table">
-                    <div class='cell single'>
+                    <div id='stock-return-home-btn'class='cell single'>
                         Stock Return
                     </div>
                 </div>
@@ -88,7 +88,7 @@
             <div class='cell icon logout'></div>
             <div class='cell'>
                 <div class="home-table">
-                    <div class='cell single'>
+                    <div id='logout-home-btn' class='cell single'>
                         Logout
                     </div>
                 </div>
