--- a/src/app/app/shared/components/left-menu.component.html
+++ b/src/app/app/shared/components/left-menu.component.html
@@ -44,7 +44,7 @@
             <div class="container" (click)="goToTargetsActualsMD()">
                 <div class='cell icon target'></div>
                 <div class='cell'>
-                    <div class='container'><div id='targets-actuals-btn' class='cell single'>Targets &amp; Actuals</div></div>
+                    <div class='container'><div id='my-dashboard-btn' class='cell single'>Targets &amp; Actuals</div></div>
                 </div>
             </div>
             <div class="separator"></div>
