--- a/src/app/app/my-transaction/components/md-targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/md-targets-actuals.component.html
@@ -4,10 +4,10 @@
 <!--Container-->
 <div class="container-body">
 
-	<div id="filter-btn" class="filter-container" *ngIf="getFilter().filterTargetsActuals">
+	<div class="filter-container" *ngIf="getFilter().filterTargetsActuals">
 		<div class="filter-label">Brand</div>
 		<div class="filter-dropdown">
-			<select name="cars">
+			<select id="filter-dropdown" name="cars">
 				<option value="volvo">Smart</option>
 				<option value="saab">Sun</option>
 			</select>
