--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -4,10 +4,10 @@
 <!--Container-->
 <div class="container-body">
 
-	<div id="filter-btn" class="filter-container" *ngIf="getFilter().filterTargetsActuals">
+	<div class="filter-container" *ngIf="getFilter().filterTargetsActuals">
 		<div class="filter-label">Brand</div>
 		<div class="filter-dropdown">
-			<select name="cars" [(ngModel)]="vSelectedBrand"  (ngModelChange)="onChangeSelectBrand($event)">
+			<select id="filter-dropdown" name="cars" [(ngModel)]="vSelectedBrand"  (ngModelChange)="onChangeSelectBrand($event)">
 				<option *ngFor="#each of getBrand()" [value]="each.brand" >
 					{{each.brand}}
 				</option>
