--- a/src/app/scss/_header.scss
+++ b/src/app/scss/_header.scss
@@ -40,6 +40,7 @@
             background: url("../img/icon-idsp/filter.png") no-repeat;
             background-size: 8vw;
             background-position: center center;
+            z-index: 150;
             padding: 0% 3% 0% 0%;
           }
           &.add {
