--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -14,9 +14,9 @@
 
 // @import "targets-actuals";
 @import "inventory";
-@import "retailer-route";
+// @import "retailer-route";
 @import "accounts-receivables";
-@import "dsp-alerts";
+// @import "dsp-alerts";
 @import "reset-password";
 
 @import "modal-box";
