--- a/src/app/app/basic-call-procedure/components/hc-basic-call-procedure.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-basic-call-procedure.component.html
@@ -1,13 +1,11 @@
-<div class='accounts-receivables'>  
+<div class="container-body">
     <div class='filter-container' *ngIf='getFilter().filterRetailerBCP'>
         <div class='filter-input input'>
-            <div class='width-10'></div>
+            <div class='icon'></div>
             <input type='text' #listFilter (keyup)='onKey(listFilter.value)' id='RetailerSearchBox' placeholder='Input Retailer Name or MIN' />
         </div>  
     </div>
-</div>
 
-<div class="container-body">
     <div class="item-container">
         <div class="container">
             <div class='cell'>
