--- a/src/app/app/my-transaction/components/accounts-receivables.component.html
+++ b/src/app/app/my-transaction/components/accounts-receivables.component.html
@@ -1,17 +1,35 @@
+<div class="container-body">
+	<div class='filter-container' *ngIf="getFilter().filterAccReceivables">
+        <div class='filter-input input'>
+            <div class='icon' (click)='searchFilter(listFilter.value)'></div>
+            <input type='text' #listFilter (keyup)='onKey(listFilter.value)' id='RetailerSearchBox' placeholder='Input Retailer Name or MIN' />
+        </div>
+
+        <div class="item-container">
+			<div class="container">
+				<div class='cell'>
+					<div class="container">
+						<div class="cell filter-label width-50 padding-top-1 padding-bottom-1">In Route</div>
+					</div>
+				</div>
+				<div class='cell'>
+					<div class="container">
+						<div class="cell filter-dropdown width-30 padding-top-1 padding-bottom-1">
+							<select id='inRouteAcc' name='route' [(ngModel)]='vSelectedRoute' (ngModelChange)='getRoute($event)'>
+								<option value='allRoute'>All</option>
+								<option value='inRoute'>Yes</option>
+							</select>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+    </div>	
+</div>
+
+
+
 <div class='accounts-receivables'>	
-	<div class='filter-container' *ngIf='getFilter().filterAccReceivables'>
-		<div class='filter-input input padding-right-5'>
-			<div class='icon' (click)='searchFilter(listFilter.value)'></div>
-			<input type='text' #listFilter (keyup)='onKey(listFilter.value)' id='RetailerSearchBox' class='align-center' placeholder='Input Retailer Name or MIN'/>
-		<div class='filter-label align-center width-30'>In Route</div>
-		<div class='filter-dropdown width-40 padding-right-5 align-center'>
-			<select id='inRouteAcc' name='route' [(ngModel)]='vSelectedRoute' (ngModelChange)='getRoute($event)'>
-				<option value='allRoute'>All</option>
-				<option value='inRoute'>Yes</option>
-			</select>
-		</div>		
-		</div>	
-	</div>
 
     <div class="item-container">
         <div class='container'>
