--- a/src/app/app/my-transaction/components/hc-retailer-route.component.html
+++ b/src/app/app/my-transaction/components/hc-retailer-route.component.html
@@ -1,12 +1,29 @@
 <div class="container-body">
-	<div class="filter-container-ret-route" *ngIf="getFilter().filterRetailerRoute">
-		<div class="filter-label">Mission For: </div>
-		<div class="filter-dropdown">
-			<select id="filter-day" [(ngModel)]="vSelectedDay" #val_day (change)="onChangeSelectDay(val_day.value)" id="selected-day">
-				<option *ngFor="#each of vListDay" [value]="each.value">{{each.name}}</option>
-			</select>
-		</div>	
-	</div>
+
+	<div id="filter-btn" class="filter-container" *ngIf="getFilter().filterRetailerRoute">
+		<div class="item-container">
+			<div class="container">
+				<div class='cell'>
+					<div class="container">
+						<div class="cell filter-label width-50 padding-top-1 padding-bottom-1">Mission For</div>
+					</div>
+				</div>
+				<div class='cell'>
+					<div class="container">
+						<div class="cell filter-dropdown width-30 padding-top-1 padding-bottom-1">
+							<select id="filter-day" [(ngModel)]="vSelectedDay" #val_day (change)="onChangeSelectDay(val_day.value)" id="selected-day">
+								<option *ngFor="#each of vListDay" [value]="each.value">{{each.name}}</option>
+							</select>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>	
+
+
+
+
     <div class="item-container" id='each-retailer'>
         <div class="container">
         	<div class='cell width-20 padding-left-5'><div class="profpic pink">G</div></div>
